--- a/collegeweb2.html
+++ b/collegeweb2.html
@@ -38,7 +38,7 @@ allolwfullscreen></iframe>
 <h2 id="podcast">News Podcast</h2>
 <P>Listen to today's top heaslines:</P>
 <audio controls>
-    <source src="sample-15s.mp3" type="audio.mp3">
+    <source src="sample-15s.mp3" type="audio/mp3">
     your browser does not support not support the audio element.
 </audio>
 <hr>
